--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
                 background:light blue;
             }
 #box{
-    background:yellow
-    width:600
-    margin:100 auto
+    background:yellow;
+    width:600;
+    margin:100 auto;
         
 }
