--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
             background:yellow;
             width:600px;
             margin:100px auto;
-            padding:50px
+            padding:50px;
         
-    }
+        }
+#image{
+    height="100px";
+    width="100px";
+    border:5px solid black;
+}
