--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
         
         }
 #image{
-    height="100px";
-    width="100px";
+    height:100px;
+    width:100px;
     border:5px solid black;
 }
