--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
                 background:light blue;
             }
         #box{
-            background:yellow;
+            background:#fce955;
             width:600px;
             margin:100px auto;
             padding:50px;
